cmake_minimum_required(VERSION 3.25)
project(eleventhCpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(usett0 usett0.cpp tabtenn.cpp tabtenn.h)
add_executable(vegnews vegnews.cpp strngbad.cpp strngbad.h)
add_executable(sayings2 sayings2.cpp string1.cpp string1.h)
add_executable(usett1 usett1.cpp tabtenn1.cpp tabtenn1.h)
add_executable(usebrass1 usebrass1.cpp brass.cpp brass.h)
add_executable(usebrass2 usebrass2.cpp brass.cpp brass.h)
add_executable(usebrass3 usebrass3.cpp acctabc.cpp acctabc.h)