project(seventhCpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(seventhCpp
        firstref.cpp)
add_executable(secondref
        sceref.cpp)
add_executable(swaps
        swaps.cpp)
add_executable(cubes.cpp
        cubes.cpp)
add_executable(strc_ref.cpp
        strc_ref.cpp)
add_executable(strquote.cpp
        strquote.cpp)
add_executable(filefunc.cpp
        filefunc.cpp)
add_executable(leftover.cpp
        leftover.cpp)
add_executable(funtemp.cpp
        funtemp.cpp)
add_executable(twotemps.cpp
        twotemps.cpp)
add_executable(twoswap.cpp
        twoswap.cpp)