cmake_minimum_required(VERSION 3.25)
project(tenthCpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(tenthCpp usetime0.cpp mytime9.cpp mytime9.h)
add_executable(tenthCpp1 usetime1.cpp mytime1.cpp mytime1.h)
add_executable(tenthCpp2 randwalk.cpp vect.cpp vect.h)
add_executable(tenthCpp3 stone.cpp stonewt.cpp stonewt.h)